--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <script src="js/app.js" defer></script>
   <title>Tracalorie 2.0 | Track your Caloric Intake</title>
  </head>
- <body>
+ <body class="bg-success">
   <header
-   class="bg-primary d-sm-flex justify-content-between align-items-center text-white text-center py-2 px-5"
+   class="bg-info d-sm-flex justify-content-between align-items-center text-white text-center py-2 px-5"
   >
    <h1><i class="fa-solid fa-utensils"></i> Tracalorie</h1>
    <div>
