--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <link rel="stylesheet" href="css/style.css" />
   <script src="js/bootstrap.bundle.min.js" defer></script>
   <script src="js/app.js" defer></script>
-  <title>Tracalorie 2.0 | Track your Caloric Intake</title>
+  <title>Calories Tracker | Track your Caloric Intake</title>
  </head>
  <body class="bg-success">
   <header
    class="bg-info d-sm-flex justify-content-between align-items-center text-white text-center py-2 px-5"
   >
-   <h1><i class="fa-solid fa-utensils"></i> Tracalorie</h1>
+   <h1><i class="fa-solid fa-utensils"></i> Calories Tracker</h1>
    <div>
     <button
      class="btn btn-outline-light mx-3"
